--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <title>Todo App</title>
-    <link href="./styles.css" rel="stylesheet" />
+    <link href="./lib/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="./lib/css/styles.css" rel="stylesheet" />
   </head>
   <body>
     <main id="app"></main>
