State & dispatch go down now

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Todo App</title>
+    <title>Get your polynomial</title>
     <link href="./lib/css/bootstrap.min.css" rel="stylesheet" />
     <link href="./lib/css/styles.css" rel="stylesheet" />
   </head>
