Left left no more

--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <html>
-  <head>
-    <title>Get your polynomial</title>
-    <link href="./lib/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="./lib/css/styles.css" rel="stylesheet" />
-  </head>
-  <body>
-    <main id="app"></main>
-    <script src="./bundle/index.js"></script>
-  </body>
+
+<head>
+  <meta charSet="utf-8" />
+  <title>Get your polynomial</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
+  <link href="./lib/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="./lib/css/styles.css" rel="stylesheet" />
+</head>
+
+<body>
+  <main id="app"></main>
+  <script src="./bundle/index.js"></script>
+</body>
+
 </html>
