--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <meta charSet="utf-8" />
+  <link rel="shortcut icon" href="#">
   <title>Get your polynomial</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
